FEAT: ALL TELAS

--- a/oferta-especifica.html
+++ b/oferta-especifica.html
@@ -136,113 +136,10 @@
                         </div>
                         <!-- <p onclick="OpenCloseMenu()" class="text-end">Teste</p> -->
                         <div class="row mt-5">
-                            <div class="col-12 col-lg-6 mb-3">
-                                <!-- PARCELA PAGA -->
-                                <div class="card p-2 border-left-color-secondary">
-                                    <div class="d-flex align-items-center justify-content-between px-2 pt-3 flex-wrap">
-                                        <h3 class="text-center h4 black">Colégio Farroupilha</h3>
-                                        <p class="text-center black">1 de 12</p>
-                                    </div>
-                                    <div class="d-flex p-2 justify-content-between flex-wrap">
-                                        <p class="black flex-grow-2">Valor Total<br> <span>R$ 2.500,00</span></p>
-                                        <p class="black flex-grow-2">Valor Pago<br> <span>R$ 2.500,00</span></p>
-                                        <p class="black flex-grow-2">Saldo devido<br> <span>R$ 0,00</span></p>
-                                    </div>
-
-                                    <div class="d-flex p-2 justify-content-between flex-wrap">
-                                        <p class="black flex-grow-2">N° Documento<br> <span>12345678-00</span></p>
-                                        <p class="black flex-grow-2">Vencimento<br> <span>10/07/2022</span></p>
-                                        <p class="black flex-grow-2">Situação<br> <span
-                                                class="rounded btn-green white px-3">Pago</span></p>
-                                    </div>
-
-                                    <div class="d-flex p-2 justify-content-between align-items-center flex-wrap">
-                                        <p class="black">Pagador<br> <span>Luciano Medice Antunes</span></p>
-                                        <button type="button" class="btn btn-secondary dropdown-toggle"
-                                            data-bs-toggle="dropdown" aria-expanded="false">
-                                            Opções
-                                        </button>
-                                        <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="#"><i
-                                                        class="fa-solid fa-receipt px-1"></i> ver extrato</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <!-- FIM PARCELA PAGA -->
-                            </div>
-
-                            <div class="col-12 col-lg-6 mb-3">
-                                <!-- PARCELA PAGA PARCIALMENTE -->
-                                <div class="card p-2 border-left-color-third">
-                                    <div class="d-flex align-items-center justify-content-between px-2 pt-3 flex-wrap">
-                                        <h3 class="text-center h4 black">Colégio Farroupilha</h3>
-                                        <p class="text-center black">2 de 12</p>
-                                    </div>
-                                    <div class="d-flex p-2 justify-content-between flex-wrap">
-                                        <p class="black flex-grow-2">Valor Total<br> <span>R$ 2.500,00</span></p>
-                                        <p class="black flex-grow-2">Valor Pago<br> <span>R$ 2.500,00</span></p>
-                                        <p class="black flex-grow-2">Saldo devido<br> <span>R$ 0,00</span></p>
-                                    </div>
-
-                                    <div class="d-flex p-2 justify-content-between flex-wrap">
-                                        <p class="black flex-grow-2">N° Documento<br> <span>12345678-00</span></p>
-                                        <p class="black flex-grow-2">Vencimento<br> <span>10/08/2022</span></p>
-                                        <p class="black flex-grow-2">Situação<br> <span
-                                                class="rounded btn-blue white px-3">Pago Parcialmente</span></p>
-                                    </div>
-
-                                    <div class="d-flex p-2 justify-content-between align-items-center flex-wrap">
-                                        <p class="black">Pagador<br> <span>Luciano Medice Antunes</span></p>
-                                        <button type="button" class="btn btn-secondary dropdown-toggle"
-                                            data-bs-toggle="dropdown" aria-expanded="false">
-                                            Opções
-                                        </button>
-                                        <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="#"><i
-                                                        class="fa-solid fa-receipt px-1"></i> ver extrato</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <!-- FIM PARCELA PAGA PARCIALMENTE -->
-                            </div>
-                            <!-- PARCELA NEGADA  -->
-                            <div class="col-12 col-lg-6 mb-3">
-                                <div class="card p-2 border-left-color-four">
-                                    <div class="d-flex align-items-center justify-content-between px-2 pt-3 flex-wrap">
-                                        <h3 class="text-center h4 black">Colégio Farroupilha</h3>
-                                        <p class="text-center black">3 de 12</p>
-                                    </div>
-                                    <div class="d-flex p-2 justify-content-between flex-wrap">
-                                        <p class="black flex-grow-2">Valor Total<br> <span>R$ 2.500,00</span></p>
-                                        <p class="black flex-grow-2">Valor Pago<br> <span>R$ 2.500,00</span></p>
-                                        <p class="black flex-grow-2">Saldo devido<br> <span>R$ 0,00</span></p>
-                                    </div>
-
-                                    <div class="d-flex p-2 justify-content-between flex-wrap">
-                                        <p class="black flex-grow-2">N° Documento<br> <span>12345678-00</span></p>
-                                        <p class="black flex-grow-2">Vencimento<br> <span>10/09/2022</span></p>
-                                        <p class="black flex-grow-2">Situação<br> <span
-                                                class="rounded btn-red white px-3">Vencido</span></p>
-                                    </div>
-
-                                    <div class="d-flex p-2 justify-content-between align-items-center flex-wrap">
-                                        <p class="black">Pagador<br> <span>Luciano Medice Antunes</span></p>
-                                        <button type="button" class="btn btn-secondary dropdown-toggle"
-                                            data-bs-toggle="dropdown" aria-expanded="false">
-                                            Opções
-                                        </button>
-                                        <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="#"><i
-                                                        class="fa-solid fa-receipt px-1"></i> ver extrato</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- FIM PARCELA NEGADA -->
-
+                    
                             <!-- PARCELA PENDENTE -->
                             <div class="col-12 col-lg-6 mb-3">
-                                <div class="card p-2 border-left-color-primary">
+                                <div class="card p-2 border-left-color-yellow">
                                     <div class="d-flex align-items-center justify-content-between px-2 pt-3 flex-wrap">
                                         <h3 class="text-center h4 black">Colégio Farroupilha</h3>
                                         <p class="text-center black">4 de 12</p>
@@ -322,24 +219,28 @@
     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content border-left-color-primary">
-                <div class="modal-header">
-                    <!-- <h2 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h2> -->
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <div class="modal-content">
+                <div class="modal-header bg-yellow">
+                    <h2 class="modal-title fs-5 black" id="staticBackdropLabel">Você recebeu uma nova proposta.<br> 
+                        Confira abaixo!</h2>
+                        <button type="button" class="btn-close white" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body p-5">
                     <div class="container">
                         <p class="text-center gray">Descrição</p>
-                        <h2 class="text-center black">Colégio Farroupilha</h2>
+                        <h2 class="text-center black">Quitar parcelas Colégio Farroupilha</h2>
                         <hr>
-                        <p class="text-center gray">Vencimento</p>
-                        <h2 class="text-center black">10/07/2022</h2>
-                        <p class="text-center gray">Parcela 2 de 12</p>
+                        <h2 class="text-center black">Regra de pagamento</h2>
+                        <p class="text-center gray">Vencimento da proposta</p>
+                        <h2 class="text-center black">10/08/22</h2>    
+                        <hr>
+                        <p class="text-center gray">Hoje seu dinheiro vale mais</p>
+                        <h2 class="text-center black">10%</h2>
                         <hr>
                         <p class="text-center gray">Valor total (R$)</p>
                         <h2 class="text-center black">2.500,00</h2>
-                        <button type="button" class="btn btn-green white w-100 mt-2">Pagar uma parte</button><br>
-                        <p class="text-center py-2"><a href="" class="gray">Pagar o valor total</a></p>
+                        <button type="button" class="btn btn-green white w-100 mt-2">Pagar valor mínimo</button><br>
+                        <p class="text-center py-2"><a href="" class="gray">Quitar oferta</a></p>
                     </div>
                 </div>
             </div>
@@ -351,7 +252,7 @@
     <div class="modal fade" id="staticBackdropPayment" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content border-left-color-primary">
+            <div class="modal-content border-left-color-yellow">
                 <div class="modal-header">
                     <!-- <h2 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h2> -->
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -385,7 +286,7 @@
     <div class="modal fade" id="staticBackdropPix" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content border-left-color-primary">
+            <div class="modal-content border-left-color-yellow">
                 <div class="modal-header">
                     <!-- <h2 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h2> -->
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -462,7 +363,7 @@
     <div class="modal fade" id="staticBackdropQuitar" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content border-left-color-primary">
+            <div class="modal-content border-left-color-yellow">
                 <div class="modal-header">
                     <!-- <h2 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h2> -->
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
