--- a/oferta.html
+++ b/oferta.html
@@ -17,11 +17,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-2">
-                    <div class="d-flex">
-                        <i onclick="OpenCloseMenu()" class="fa-solid fa-bars mx-2 d-lg-none d-xl-none"></i>  
-                        <img class="mx-auto d-block" src="assets/img/logo.png" title="Pop pag" alt="Pop pag" />
-
-                    </div>
+                    <img class="mx-auto d-block" src="assets/img/logo.png" title="Pop pag" alt="Pop pag" />
                 </div>
                 <div class="col-10">
                     <div class="d-flex justify-content-end align-items-center">
@@ -33,12 +29,12 @@
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle white" data-bs-toggle="dropdown" href="#"
                                         role="button" aria-expanded="false">
-                                        <!-- rounded-circle -->  
-                                                                         
+                                        <!-- rounded-circle -->
+                                        Luciano Antunes
                                         <img src="assets/img/profile-picture.png" alt="User" title="User" />
                                     </a>
-                                    <ul class="dropdown-menu">                                                                        
-                                        <li><a class="dropdown-item" href="meu-perfil.html">Meu Perfil</a></li>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="#">Meu Perfil</a></li>
                                         <li>
                                             <hr class="dropdown-divider">
                                         </li>
@@ -105,7 +101,7 @@
                     <div class="container">
                         <div class="d-flex justify-content-between align-items-center flex-wrap">
                             <div>
-                                <h1 class="blue">Cobranças</h1>
+                                <h1 class="blue">Colégio Farroupilha</h1>
                             </div>
                             <div class="d-flex align-items-center flex-wrap">
                                 <div class="input-group mx-3 pb-2">
@@ -137,92 +133,87 @@
                                 </div>
 
                             </div>
+                        </div>
+                        <!-- <p onclick="OpenCloseMenu()" class="text-end">Teste</p> -->
+                        <div class="row mt-5">
+                            <div class="col-12 col-lg-4 mb-3">
+                                <a class="text-decoration-none" href="oferta-especifica.html">
+                                    <div class="card p-2 border-left-color-yellow">
+                                        <div class="d-flex align-items-center justify-content-between px-2 pt-3">
+                                            <h3 class="text-center h4 black">Colégio Farroupilha</h3>
+                                            <p class="text-center black">1 de 3</p>
+                                        </div>
+                                        <d class="d-flex justify-content-between align-items-center">
+                                            <p class="h4 px-2 mt-4 black">R$ 1.000,00</p>
+                                            <img class="img-oferta-custom" src="./assets/img/oferta.png" alt="Oferta" title="Oferta">
+                                        </d>
+                                    </div>
+                                </a>
                             </div>
-                            <!-- <p onclick="OpenCloseMenu()" class="text-end">Teste</p> -->
-                            <div class="row mt-5">
-                                <div class="col-12 col-lg-4 mb-3">
-                                    <div class="card">
-                                        <div class="pt-2">
-                                            <img src="assets/img/colegio-farroupilha.png" alt="Colégio Farroupilha"
-                                                title="Colégio Farroupilha" />
-                                        </div>
-                                        <p class="text-center pt-3">Recebedor</p>
-                                        <h2 class="text-center">Colégio Farroupilha</h2>
-                                        <a class="bg-primary white text-center py-2 rounded-bottom text-uppercase text-decoration-none"
-                                            href="detalhes-cobranca.html">Visualizar</a>
-                                    </div>
-                                </div>
 
-                                <div class="col-12 col-lg-4 col-sm-12 mb-3">
-                                    <div class="card">
-                                        <div class="pt-2">
-                                            <img src="assets/img/colegio-farroupilha.png" alt="Colégio Farroupilha"
-                                                title="Colégio Farroupilha" />
-                                        </div>
-                                        <p class="text-center pt-3">Recebedor</p>
-                                        <h2 class="text-center">Colégio Farroupilha</h2>
-                                        <a class="bg-yellow white text-center py-2 rounded-bottom text-uppercase text-decoration-none"
-                                            href="oferta.html"><img src="./assets/img/oferta.png" alt="Oferta" title="Oferta"> Visualizar</a>
+                            <div class="col-12 col-lg-4 mb-3">
+                                <div class="card p-2 border-left-color-secondary">
+                                    <div class="d-flex align-items-center justify-content-between px-2 pt-3">
+                                        <h3 class="text-center h4 black">Colégio Farroupilha</h3>
+                                        <p class="text-center black">1 de 3</p>
                                     </div>
+                                    <p class="h4 px-2 mt-4 black">R$ 1.000,00</p>
                                 </div>
-
-                                <div class="col-12 col-lg-4 mb-3">
-                                    <div class="card">
-                                        <div class="pt-2">
-                                            <img src="assets/img/colegio-farroupilha.png" alt="Colégio Farroupilha"
-                                                title="Colégio Farroupilha" />
-                                        </div>
-                                        <p class="text-center pt-3">Recebedor</p>
-                                        <h2 class="text-center">Colégio Farroupilha</h2>
-                                        <a class="bg-primary white text-center py-2 rounded-bottom text-uppercase text-decoration-none"
-                                            href="">Visualizar</a>
-                                    </div>
-                                </div>
-
-                                <div class="col-12 col-lg-4 mb-3">
-                                    <div class="card">
-                                        <div class="pt-2">
-                                            <img src="assets/img/colegio-farroupilha.png" alt="Colégio Farroupilha"
-                                                title="Colégio Farroupilha" />
-                                        </div>
-                                        <p class="text-center pt-3">Recebedor</p>
-                                        <h2 class="text-center">Colégio Farroupilha</h2>
-                                        <a class="bg-primary white text-center py-2 rounded-bottom text-uppercase text-decoration-none"
-                                            href="">Visualizar</a>
-                                    </div>
-                                </div>
-
-                                <div class="col-12 col-lg-4 mb-3">
-                                    <div class="card">
-                                        <div class="pt-2">
-                                            <img src="assets/img/colegio-farroupilha.png" alt="Colégio Farroupilha"
-                                                title="Colégio Farroupilha" />
-                                        </div>
-                                        <p class="text-center pt-3">Recebedor</p>
-                                        <h2 class="text-center">Colégio Farroupilha</h2>
-                                        <a class="bg-primary white text-center py-2 rounded-bottom text-uppercase text-decoration-none"
-                                            href="">Visualizar</a>
-                                    </div>
-                                </div>
-
-                                <div class="col-12 col-lg-4 mb-3">
-                                    <div class="card">
-                                        <div class="pt-2">
-                                            <img src="assets/img/colegio-farroupilha.png" alt="Colégio Farroupilha"
-                                                title="Colégio Farroupilha" />
-                                        </div>
-                                        <p class="text-center pt-3">Recebedor</p>
-                                        <h2 class="text-center">Colégio Farroupilha</h2>
-                                        <a class="bg-primary white text-center py-2 rounded-bottom text-uppercase text-decoration-none"
-                                            href="">Visualizar</a>
-                                    </div>
-                                </div>
-
                             </div>
+
+                            <div class="col-12 col-lg-4 mb-3">
+                                <a class="text-decoration-none" href="oferta-especifica.html">
+                                    <div class="card p-2 border-left-color-primary">
+                                        <div class="d-flex align-items-center justify-content-between px-2 pt-3">
+                                            <h3 class="text-center h4 black">Colégio Farroupilha</h3>
+                                            <p class="text-center black">1 de 3</p>
+                                        </div>
+                                        <p class="h4 px-2 mt-4 black">R$ 1.000,00</p>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="col-12 col-lg-4 mb-3">
+                                <a class="text-decoration-none" href="oferta-especifica.html">
+                                    <div class="card p-2 border-left-color-primary">
+                                        <div class="d-flex align-items-center justify-content-between px-2 pt-3">
+                                            <h3 class="text-center h4 black">Colégio Farroupilha</h3>
+                                            <p class="text-center black">1 de 3</p>
+                                        </div>
+                                        <p class="h4 px-2 mt-4 black">R$ 1.000,00</p>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="col-12 col-lg-4 mb-3">
+                                <a class="text-decoration-none" href="oferta-especifica.html">
+                                    <div class="card p-2 border-left-color-primary">
+                                        <div class="d-flex align-items-center justify-content-between px-2 pt-3">
+                                            <h3 class="text-center h4 black">Colégio Farroupilha</h3>
+                                            <p class="text-center black">1 de 3</p>
+                                        </div>
+                                        <p class="h4 px-2 mt-4 black">R$ 1.000,00</p>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="col-12 col-lg-4 mb-3">
+                                <a class="text-decoration-none" href="oferta-especifica.html">
+                                    <div class="card p-2 border-left-color-primary">
+                                        <div class="d-flex align-items-center justify-content-between px-2 pt-3">
+                                            <h3 class="text-center h4 black">Colégio Farroupilha</h3>
+                                            <p class="text-center black">1 de 3</p>
+                                        </div>
+                                        <p class="h4 px-2 mt-4 black">R$ 1.000,00</p>
+                                    </div>
+                                </a>
+                            </div>
+
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
     </main>
     <script src="assets/js/script.js"></script>
     <script src="assets/js/all.min.js"></script>
